--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,5 +1,11 @@
 :root {
   --primary-color: #ff9854;
+  --line-color: #fafafa;
+  --theme-linear-gradient: linear-gradient(90deg, #fa8c1d, #fcaf3f);
+
+  --van-index-anchor-sticky-text-color: #ff9854 !important;
+  --van-index-bar-index-active-color: #ff9854 !important;
+  --van-primary-color: var(--primary-color);
 
   /* 全局修改: 任何地方只要用到-van-tabbar-item-icon-size都会被修改掉 */
   /* --van-tabbar-item-icon-size: 30px !important; */
@@ -7,4 +13,17 @@
 
 body {
   font-size: 14px;
+}
+
+.top-page {
+  position: relative;
+  z-index: 9;
+  height: 100vh;
+  background-color: #fff;
+
+  overflow-y: auto;
+}
+
+.bottom-gray-line {
+  border-bottom: 1px solid var(--line-color);
 }
